style: fix z-index for change-tile menu

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -115,11 +115,10 @@
   height: 100%;
   background-color: rgba(0,0,0,0.5);
   position: fixed;
-  z-index: 100;
+  z-index: 11;
 }
 
 .select-tile__menu{
-  z-index: 100;
   position: fixed;
   top: 30%;
   left: 50%;
